--- a/blog/01-推荐三个实用的 Go 开发工具.md
+++ b/blog/01-推荐三个实用的 Go 开发工具.md
@@ -1,5 +1,7 @@
 ![](https://github.com/yongxinz/gopher/blob/main/blog/pic/01-%E5%AE%9E%E7%94%A8%E5%B7%A5%E5%85%B7.png)
 
+**原文链接：** [推荐三个实用的 Go 开发工具](https://mp.weixin.qq.com/s/3GLMLhegB3wF5_62mpmePA)
+
 孙悟空在花果山称王的时候，特意去了一趟东海，在那里淘到了如意金箍棒。因为身为一个山大王，怎么能没有一件趁手的兵器呢？
 
 作为程序员的我们也一样，除了我们的傍身武器 `Ctrl C + V` 之外，还要不停的补充我们的武器库。不仅要把 `Ctrl C + V` 用的高级，更要用的恰到好处。
