--- a/sc/01-变量和常量的声明与赋值.md
+++ b/sc/01-变量和常量的声明与赋值.md
@@ -1,5 +1,7 @@
 ![](https://github.com/yongxinz/gopher/blob/main/sc/pic/01_%E5%8F%98%E9%87%8F%E5%92%8C%E5%B8%B8%E9%87%8F.png)
 
+**原文链接：** [Go 专栏｜变量和常量的声明与赋值](https://mp.weixin.qq.com/s/cIceTj02bGa0BYqu-JN1Bg)
+
 上篇文章介绍了环境搭建，并完成了学习 Go 的第一个程序 Hello World。这篇文章继续学习 Go 的基础知识，来看看变量，常量的声明与赋值。
 
 > 本文所有代码基于 go1.16.6 编写。
