--- a/sc/02-基础数据类型：整数、浮点数、复数、布尔值和字符串.md
+++ b/sc/02-基础数据类型：整数、浮点数、复数、布尔值和字符串.md
@@ -1,5 +1,7 @@
 ![](https://github.com/yongxinz/gopher/blob/main/sc/pic/02_%E5%9F%BA%E7%A1%80%E6%95%B0%E6%8D%AE%E7%B1%BB%E5%9E%8B.png)
 
+**原文链接：** [Go 专栏｜基础数据类型：整数、浮点数、复数、布尔值和字符串](https://mp.weixin.qq.com/s/aotpxglSGRFfl6A1xPN-dw)
+
 Go 专栏的第三篇，本文内容依旧很基础，很简单。如果有编程经验的话，可能扫一眼就了然于胸了。但如果刚开始接触编程，建议还是好好看看，把文中的代码 demo 都自己跑一遍。只有基础打好了，才能向更高的目标迈进。
 
 话不多说，走起～
