--- a/sc/05-流程控制，一网打尽.md
+++ b/sc/05-流程控制，一网打尽.md
@@ -1,5 +1,7 @@
 ![](https://github.com/yongxinz/gopher/blob/main/sc/pic/05_%E6%B5%81%E7%A8%8B%E6%8E%A7%E5%88%B6.png)
 
+**原文链接：** [Go 专栏｜流程控制，一网打尽](https://mp.weixin.qq.com/s/TbjT1dmTvwiKCzzbWc23kA)
+
 最近看奥运会看的我热血沸腾，中国奥运健儿简直太棒了，不只是成绩，还有气质，精气神，全方位的棒。
 
 而且这次奥运会我觉得最感动的是，看到一些年纪大的运动员拿了好成绩：吕小军 37 岁，马龙 32，苏炳添 32，巩立姣 32 岁才拿了自己的第一块奥运金牌。连这么受限于年龄的运动员都能不断突破自己，何况我们呢？还每天在网上焦虑程序员 35 岁就要被优化？
