--- a/sc/06-函数那些事.md
+++ b/sc/06-函数那些事.md
@@ -1,5 +1,7 @@
 ![](https://github.com/yongxinz/gopher/blob/main/sc/pic/06_%E5%87%BD%E6%95%B0.png)
 
+**原文链接：** [Go 专栏｜函数那些事](https://mp.weixin.qq.com/s/RKpyVrhtSk9pXMWNVpWYjQ)
+
 曾经很长一段时间，我都为自己是互联网科技公司的一员而感到自豪，我觉得我们与众不同。
 
 我们的管理更扁平化，没有那么多官僚主义，充满活力，朝气蓬勃。而且我们的产品正在改变大家的衣食住行，我们正在改变世界。
