--- a/sc/08-说说方法.md
+++ b/sc/08-说说方法.md
@@ -1,5 +1,7 @@
 ![](https://github.com/yongxinz/gopher/blob/main/sc/pic/08_%E6%96%B9%E6%B3%95.png)
 
+**原文链接：** [Go 专栏｜说说方法](https://mp.weixin.qq.com/s/qvFipY0pnmqxok6CVKquvg)
+
 最近又搬家了，已经记不清这是第几次搬家了。搬到了公司附近，走路十分钟，以后加班可方便了。
 
 这一篇来说一说方法，方法可以看作是某种特定类型的函数，是 Go 面向对象编程的第一步。用好方法，具备面向对象编程思想是关键。
